# Thronglets

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FAQ.md  README.en.md  README.md  REVIEW_TODO.md  TODO.md  WHITEPAPER.md  llms.txt  server.json
.github/workflows/: ci.yml  release.yml  site.yml
docs/: SIGNAL_DESIGN.md  index.html  llms.txt  robots.txt  sitemap.xml
npm/: README.md  package.json
npm/scripts/: install.js
python/: README.md  pyproject.toml
python/thronglets/: __init__.py
scripts/: install.ps1  install.sh
src/: active_policy.rs  adapter_ops.rs  ambient.rs  cli.rs  economy.rs  eval.rs  hook_support.rs  identity_surface.rs  lib.rs  main.rs  network_runtime.rs  network_state.rs  onboarding_surface.rs  pheromone.rs  pheromone_socket.rs  profile.rs  pulse.rs  render.rs  responses.rs  service.rs  setup_support.rs  target_kind.rs  update.rs
src/anchor/: mod.rs
src/cmd/: daemon.rs  eval.rs  hooks.rs  inspect.rs  mod.rs  onboard.rs  priors.rs  setup.rs  substrate.rs
src/context/: mod.rs
src/continuity/: mod.rs
src/contracts/: mod.rs
src/http/: mod.rs
src/identity/: mod.rs
src/mcp/: mod.rs
src/network/: mod.rs
src/posts/: mod.rs
src/presence/: mod.rs
src/signals/: mod.rs
src/storage/: mod.rs
src/trace/: mod.rs
src/workspace/: hints.rs  mod.rs
tests/: adapter_bootstrap.rs  bootstrap_matrix.rs  bootstrap_v2_golden.rs  eval_emergence.rs  eval_signals.rs  identity_cli.rs  mcp_stdio.rs  network_status.rs  packaging_surfaces.rs  perf_guardrails.rs  presence_cli.rs  profile_summary.rs  regression_corpus.rs  release_check.rs  space_cli.rs  two_node_sync.rs  version_cli.rs
tests/fixtures/bootstrap_v2/: bootstrap_codex.json  detect_all_present.json  doctor_codex_needs_fix.json  doctor_codex_restart_pending.json  install_plan_codex.json  install_plan_generic.json
