[package]
name = "thronglets"
version = "0.1.0"
edition = "2024"
description = "P2P shared memory substrate for AI agents — stigmergic knowledge network via libp2p"
license = "MIT"
repository = "https://github.com/Shangri-la-0428/Thronglets"
readme = "README.md"
keywords = ["p2p", "ai-agents", "mcp", "libp2p", "stigmergy"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "macros",
    "ed25519",
] }
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto & identity (Cosmos-compatible ed25519)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
bech32 = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
