[package]
name = "thronglets"
version = "0.7.3"
edition = "2024"
description = "Local AI substrate for agents with sparse signals, hooks, and optional adapters"
license = "MIT"
repository = "https://github.com/Shangri-la-0428/Thronglets"
readme = "README.en.md"
keywords = ["ai-agents", "hooks", "http", "stigmergy", "substrate"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "macros",
    "ed25519",
    "relay",
    "dcutr",
    "autonat",
    "upnp",
] }
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto & identity (Cosmos-compatible ed25519)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
bech32 = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Anchor layer (Oasyce chain)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
base64 = "0.22"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
