[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thronglets"
version = "0.7.4"
description = "Local AI substrate for agents with sparse signals, hooks, and optional adapters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["ai-agents", "hooks", "http", "stigmergy", "collective-intelligence", "substrate", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]
authors = [
    { name = "Shangri-la-0428", email = "ptc0428@qq.com" },
]

[project.urls]
Homepage = "https://github.com/Shangri-la-0428/Thronglets"
Repository = "https://github.com/Shangri-la-0428/Thronglets"
Issues = "https://github.com/Shangri-la-0428/Thronglets/issues"

[project.scripts]
thronglets = "thronglets:main"

[tool.hatch.build.targets.wheel]
packages = ["thronglets"]
